--- a/public/style.css
+++ b/public/style.css
@@ -1,62 +1,5 @@
-body {
-  padding: 0;
-  margin: 0;
-  background-color: #0f1456;
-  margin: 0 auto;
-}
-
-header {
-  display: grid;
-  background-color: #020421;
-  width: 100%;
-  height: 6em;
-  align-content: center;
-}
-
-header nav {
-  width: 90%;
-}
-
-header ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
-  height: fit-content;
-  width: fit-content;
-}
-
-header nav li:nth-child(3) {
-  justify-self: self-end;
-}
-
-header nav li {
-  list-style-type: none;
-}
-
-header nav a {
-  text-decoration: none;
-  margin: 0 5px;
-  color: white;
-}
-
-header nav a:hover {
-  text-decoration: none;
-  background-color: #0f1456;
-}
-
-#register-window {
-  display: grid;
-  margin: 0 auto;
-  padding-top: 25px;
-  width: 40%;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  justify-content: center;
-}
-
-#register-window label {
-  color: white;
-}
-
-#register-window input {
-  width: 100%;
+nav {
+  height: 500px;
+  width: 500px;
+  border: 3px solid black;
 }
