--- a/app/style.css
+++ b/app/style.css
@@ -1,5 +1,45 @@
-nav {
-  height: 500px;
-  width: 500px;
-  border: 3px solid black;
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#login-form-wrapper {
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+}
+
+#login-form {
+  margin: auto auto;
+  display: grid;
+  height: 20vh;
+  width: 30vh;
+  grid-template-rows: 1fr 1fr 2fr 1fr;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
+#login-username {
+  grid-row: 1/2;
+  margin-bottom: 5px;
+}
+
+#login-password {
+  grid-row: 2/3;
+  margin-top: 5px;
+}
+
+#login-submit {
+  grid-row: 3/4;
+  margin-top: 40px;
+}
+
+#login-submit:hover {
+  cursor: pointer;
+}
+
+#to-registration {
+  grid-row: 4/5;
+  margin-top: 15px;
 }
