--- a/app/style.css
+++ b/app/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #login-form {
-  margin: auto auto;
+  margin: 0 auto;
   display: grid;
   height: 20vh;
   width: 30vh;
@@ -42,4 +42,77 @@ body {
 #to-registration {
   grid-row: 4/5;
   margin-top: 15px;
+}
+
+#register-form-wrapper {
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+}
+
+#register-form {
+  margin: auto;
+  margin: 0 auto;
+  display: grid;
+  height: 30vh;
+  width: 30vh;
+  grid-template-rows: 1fr 1fr 1fr 1fr 2fr 1fr;
+  grid-template-columns: 30vh;
+  text-align: center;
+}
+
+#register-username-wrapper {
+  grid-row: 1/2;
+}
+
+.relative {
+  position: relative;
+}
+
+.register-label-starter {
+  position: absolute;
+  left: 5px;
+  top: 21px;
+  font-size: 80%;
+  z-index: 1;
+  transition: all 200ms ease;
+}
+
+.register-label-end {
+  position: absolute;
+  left: 5px;
+  top: 1px;
+  font-size: 80%;
+  z-index: 1;
+}
+
+.register-label:hover {
+  cursor: inherit;
+}
+
+.register-input {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 60%;
+  right: 0;
+  bottom: 0;
+}
+
+#register-password-wrapper {
+  grid-row: 2/3;
+}
+
+#register-passwordRepeate-wrapper {
+  grid-row: 3/4;
+}
+
+#register-email-wrapper {
+  grid-row: 4/5;
+}
+
+#register-submit {
+  grid-row: 5/6;
+  margin-top: 40px;
 }
