--- a/app/style.css
+++ b/app/style.css
@@ -116,3 +116,34 @@ body {
   grid-row: 5/6;
   margin-top: 40px;
 }
+
+#register-submit:hover {
+  cursor: pointer;
+}
+
+#to-login {
+  margin-top: 15px;
+}
+
+#flash-message-wrapper {
+  position: absolute;
+  max-width: 40vh;
+  max-height: fit-content;
+  top: 12vh;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 1;
+  background-color: orange;
+  padding: 10px;
+  box-sizing: border-box;
+  box-shadow: inset 0 0 5px black;
+}
+
+.hidden {
+  display: none;
+}
+
+.round-corner {
+  border-radius: 5px;
+}
