--- a/app/style.css
+++ b/app/style.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
 }
 
+/* login */
 #login-form-wrapper {
   display: grid;
   height: 100vh;
@@ -52,6 +53,10 @@ body {
   grid-row: 4/5;
   margin-top: 15px;
 }
+
+/* login end */
+
+/* registration */
 
 #register-form-wrapper {
   display: grid;
@@ -134,6 +139,9 @@ body {
   margin-top: 15px;
 }
 
+/* registration end */
+
+/* flash messege */
 #flash-message-wrapper {
   position: absolute;
   max-width: 40vh;
@@ -167,6 +175,79 @@ body {
 .hidden {
   opacity: 0;
 }
+
+/* flash messege end */
+
+/* post*/
+
+.post-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto minmax(15%);
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.493);
+  box-sizing: border-box;
+}
+
+.post-wrapper h1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-body {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-username {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-create-date {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper button {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  justify-self: center;
+  margin: 10px 0;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.post-wrapper button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.post-wrapper a {
+  color: black;
+}
+
+.post-wrapper a:hover {
+  color: red;
+}
+
+#single-post-wrapper {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: 60%;
+}
+
+/* post end*/
 
 .round-corner {
   border-radius: 5px;
