--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,332 @@
-nav {
-  height: 500px;
-  width: 500px;
-  border: 3px solid black;
+html {
+  font-family: Tahoma, sans-serif;
+  scroll-behavior: smooth;
+}
+
+input {
+  font-family: Tahoma, sans-serif;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+/* main layout */
+
+#main-wrapper {
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  min-height: 100vh;
+  height: auto;
+}
+
+#sidebar {
+  position: sticky;
+  top: 40vh;
+  align-self: baseline;
+  display: grid;
+  width: 100%;
+  justify-items: center;
+  align-items: center;
+}
+
+#sidebar nav {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: fit-content;
+}
+
+#main-content-wrapper {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-gap: 2px;
+  width: 100%;
+}
+
+/* main layout end */
+
+/* login */
+#login-form-wrapper {
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+}
+
+#login-form {
+  margin: 0 auto;
+  display: grid;
+  height: 20vh;
+  width: 30vh;
+  grid-template-rows: 1fr 1fr 2fr 1fr;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
+#login-username {
+  grid-row: 1/2;
+  margin-bottom: 5px;
+}
+
+#login-password {
+  grid-row: 2/3;
+  margin-top: 5px;
+}
+
+#login-submit {
+  grid-row: 3/4;
+  margin-top: 40px;
+}
+
+#login-submit:hover {
+  cursor: pointer;
+}
+
+#to-registration {
+  grid-row: 4/5;
+  margin-top: 15px;
+}
+
+/* login end */
+
+/* registration */
+
+#register-form-wrapper {
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+}
+
+#register-form {
+  margin: auto;
+  margin: 0 auto;
+  display: grid;
+  height: 30vh;
+  width: 30vh;
+  grid-template-rows: 1fr 1fr 1fr 1fr 2fr 1fr;
+  grid-template-columns: 30vh;
+  text-align: center;
+}
+
+#register-username-wrapper {
+  grid-row: 1/2;
+}
+
+.relative {
+  position: relative;
+}
+
+.register-label-starter {
+  position: absolute;
+  left: 5px;
+  top: 19px;
+  font-size: 80%;
+  z-index: 1;
+  transition: all 200ms ease;
+}
+
+.register-label-end {
+  position: absolute;
+  left: 5px;
+  top: 0;
+  font-size: 80%;
+  z-index: 1;
+}
+
+.register-label:hover {
+  cursor: inherit;
+}
+
+.register-input {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 60%;
+  right: 0;
+  bottom: 0;
+}
+
+#register-password-wrapper {
+  grid-row: 2/3;
+}
+
+#register-passwordRepeate-wrapper {
+  grid-row: 3/4;
+}
+
+#register-email-wrapper {
+  grid-row: 4/5;
+}
+
+#register-submit {
+  grid-row: 5/6;
+  margin-top: 40px;
+}
+
+#register-submit:hover {
+  cursor: pointer;
+}
+
+#to-login {
+  margin-top: 15px;
+}
+
+/* registration end */
+
+/* flash messege */
+
+#flash-message-wrapper {
+  position: absolute;
+  max-width: 40vh;
+  max-height: fit-content;
+  top: 12vh;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 1;
+  transition: opacity 400ms ease;
+}
+
+#flash-message-wrapper .flash-message {
+  padding: 10px;
+  box-sizing: border-box;
+  box-shadow: 0 0 5px black;
+}
+
+#flash-message-wrapper .success {
+  background-color: green;
+}
+
+#flash-message-wrapper .warning {
+  background-color: orange;
+}
+
+#flash-message-wrapper .error {
+  background-color: red;
+}
+
+/* flash messege end */
+
+/* post*/
+
+.post-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto minmax(15%);
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.493);
+  box-sizing: border-box;
+}
+
+.post-wrapper h1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-body {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-username {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper .post-create-date {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  justify-self: center;
+  margin: 10px 0;
+}
+
+.post-wrapper button {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  justify-self: center;
+  margin: 10px 0;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.post-wrapper button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.post-wrapper a {
+  color: black;
+}
+
+.post-wrapper a:hover {
+  color: red;
+}
+
+/* post end*/
+
+/* create post*/
+
+#create-post-div {
+  width: 100%;
+  height: fit-content;
+}
+
+#make-a-post-button {
+  width: 100%;
+}
+
+#make-a-post-button:hover {
+  cursor: pointer;
+}
+
+#post-input-wrapper {
+  height: 20vh;
+  grid-template-columns: 100%;
+  grid-template-rows: 10% 80% 10%;
+}
+
+#post-title {
+  grid-row: 1/2;
+}
+
+#post-body {
+  grid-row: 2/3;
+}
+
+#post-submit {
+  grid-row: 3/4;
+}
+
+/* create post end */
+
+/*sidebar */
+
+/* sidebar end */
+.round-corner {
+  border-radius: 5px;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.display-none {
+  display: none;
+}
+
+.display-grid {
+  display: grid;
+}
+
+button:hover {
+  cursor: pointer;
 }
