--- a/app/style.css
+++ b/app/style.css
@@ -5,6 +5,14 @@ html {
 
 input {
   font-family: Tahoma, sans-serif;
+  border: solid 1px #162955;
+  box-shadow: inset 0 0 2px #4f628e;
+}
+
+textarea {
+  font-family: Tahoma, sans-serif;
+  border: solid 1px #162955;
+  box-shadow: inset 0 0 2px #4f628e;
 }
 
 body {
@@ -75,17 +83,39 @@ body {
 }
 
 #login-submit {
+  font-size: 120%;
   grid-row: 3/4;
   margin-top: 40px;
+  background-color: white;
+  border: solid 1px #162955;
+  box-shadow: 1px 2px 2px #4f628e;
 }
 
 #login-submit:hover {
   cursor: pointer;
+  color: white;
+  background-color: #162955;
+}
+
+#login-submit:active {
+  box-shadow: 0 0 0;
 }
 
 #to-registration {
   grid-row: 4/5;
   margin-top: 15px;
+}
+
+#to-registration:hover {
+  color: #4f628e;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: #4f628e;
 }
 
 /* login end */
@@ -161,12 +191,22 @@ body {
 }
 
 #register-submit {
+  font-size: 120%;
   grid-row: 5/6;
   margin-top: 40px;
+  background-color: white;
+  border: solid 1px #162955;
+  box-shadow: 1px 2px 2px #4f628e;
 }
 
 #register-submit:hover {
   cursor: pointer;
+  color: white;
+  background-color: #162955;
+}
+
+#register-submit:active {
+  box-shadow: 0 0 0;
 }
 
 #to-login {
@@ -289,17 +329,24 @@ body {
 }
 
 #post-input-wrapper {
+  background-color: #4f628e46;
   height: 20vh;
   grid-template-columns: 100%;
   grid-template-rows: 10% 80% 10%;
+  padding: 10px;
 }
 
 #post-title {
   grid-row: 1/2;
+  box-shadow: 1px 2px 2px #4f628e;
 }
 
 #post-body {
   grid-row: 2/3;
+  resize: none;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  box-shadow: 1px 2px 2px #4f628e;
 }
 
 #post-submit {
@@ -327,6 +374,19 @@ body {
   display: grid;
 }
 
+button {
+  background-color: white;
+  border: solid 1px #162955;
+  box-shadow: 1px 2px 2px #4f628e;
+}
+
 button:hover {
   cursor: pointer;
+  color: white;
+  background-color: #162955;
+}
+
+button:active {
+  cursor: pointer;
+  box-shadow: 0 0 0;
 }
