--- a/app/style.css
+++ b/app/style.css
@@ -367,9 +367,37 @@ a:hover {
 
 /* create post end */
 
-/*sidebar */
+/* search */
+
+#search-wrapper-div {
+  width: fit-content;
+}
+
+#search-result {
+  position: absolute;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: #4f628e;
+  color: white;
+  width: fit-content;
+  max-height: 40vh;
+  padding: 5px;
+}
+
+#search-result button {
+  width: 100%;
+}
+
+#search-result a:hover {
+  color: white;
+}
+
+/* search end */
+
+/* sidebar */
 
 /* sidebar end */
+
 .round-corner {
   border-radius: 5px;
 }
